created new folder styles, and new file first-stylesheet.css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<title> My various projects</title>
 
-
+<link rel="stylesheet"   type="text/css"       href="styles/first-stylesheet.css"> 
 
 </head>
 
