added in numerous CSS styles

--- a/hobbies.html
+++ b/hobbies.html
@@ -6,11 +6,11 @@
 
 
 	<title>My Hobbies</title>
-
+<link  rel="stylesheet" type="text/css" href="styles/first-stylesheet.css"> 
 
 </head>
 
-<body>
+<body id="hobbies-body">
 
 	<h1> Welcome!</h1>
 
