--- a/index.html
+++ b/index.html
@@ -28,15 +28,18 @@
 	<section> 
 
 		<article>
-			<h2><u> Week 1 project</u></h2>
+			<h2> Week 1 project</h2>
 			
 			<header> Week one mainly involved getting used to a number of new symantec elements which were introduced in HTML5</header>
 
 
 			<figure> 	
-				<img src="https://media02.hongkiat.com/html-5-semantics/document-outline-example.jpg" width="600" height="400"> 
+				<img   id="image-one" src="https://media02.hongkiat.com/html-5-semantics/document-outline-example.jpg" width="600" height="400"> 
+				<img   id="image-two" src="https://msdnshared.blob.core.windows.net/media/MSDNBlogsFS/prod.evol.blogs.msdn.com/CommunityServer.Blogs.Components.WeblogFiles/00/00/00/91/03/metablogapi/5086.HTML5PageLayout_2.jpg"> 
 				<figcaption> The image above displays the general arrangement of symantec elements </figcaption>
 			</figure>
+
+
 			<p> 
 
 				<a href="https://github.com/anderscjGIT/semantic_tags.git" target="_blank"> Link to my code</a>
@@ -47,7 +50,7 @@
 						<aside> 
 							<header> Below are some of the main HTML5 symatec elements that bring some much needed structure and consistency to HTML</header>
 							<ul> 
-								<li> article</li>
+								<li>article</li>
 								<li> aside</li>
 								<li> section</li>
 								<li> nav</li>
@@ -78,7 +81,7 @@
 					<hr> 
 
 	<section> 
-						<h2><u> Week 2 project</u></h2>
+						<h2>Week 2 project</h2>
 						<header> Week 2's project is to create two webpages. This first webpage is based on the various class projects that I have been working on so far.</header>
 
 
