added in additional CSS code

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 	<header> HTML projects completed, and in progress </header>
 	<p>
 		<nav> 
-			<a href="#" > Home</a>
-			<a href="hobbies.html" > Hobbies</a>
-			<a href="#" > Contact</a>
+			<a id="red" href="#" > Home</a>
+			<a id="green" href="hobbies.html" > Hobbies</a>
+			<a id="blue" href="#" > Contact</a>
 		</nav>	
 	</p>  
 	<hr>
