added in additional CSS code

--- a/hobbies.html
+++ b/hobbies.html
@@ -16,13 +16,13 @@
 
 	<header id="header-hobbies-1"> This page highlights my various hobbies, currently. </header>
 	
-	<p>
+	
 		<nav class="hobbies-nav"> 
 			<a id="hobbies-red" href="index.html" > Home</a>
 			<a id="hobbies-green" href="index.html" >Past HTML Projects</a>
 			<a id="hobbies-blue" href="#" > Contact</a>
 		</nav>
-	</p>
+	
 
 	<hr> 
 
@@ -62,11 +62,11 @@
 				<figure> 
 
 					<img id="hobbies-img3" src="https://images.pexels.com/photos/89625/pexels-photo-89625.jpeg?w=940&h=650&auto=compress&cs=tinysrgb" width="900" height="400"> 
-					<figcaption>
+					<figcaption class="hobbies-figcaption">
 						I have always enjoyed drawing as a child, and I continued drawing up until the end of highschool.  After graduating, I seem to have dropped the hobby altogether.  Only recently have I become interested in learning more about this subject again. I have found that this creative outlet reduces stress, and allows my creative side to explore new ideas.
 
 
-					</figcaption class="hobbies-figcaption">
+					</figcaption >
 				</figure>
 
 				<aside> 
@@ -113,13 +113,13 @@
 		</section>
 		<footer> 
 
-			<p>
+			
 				<nav> 
 					<a id="orange" href="index.html" > Home</a>
-					<a id=" yellow" href="index.html" >Past Projects</a>
+					<a id="yellow" href="index.html" >Past Projects</a>
 					<a id="crimson" href="#" > Contact</a>
 				</nav>
-			</p>
+			
 
 		</footer>
 
