added a font style from Google, and Font-Awesome. Messed around with background images

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
 <link rel="stylesheet"   type="text/css"       href="styles/first-stylesheet.css"> 
 
+<!-- Google fonts --> 
+<link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
+
+<!-- Font Awesome embeded code --> 
+<script src="https://use.fontawesome.com/500aa3c65e.js"></script>
 </head>
 
 
@@ -28,7 +33,7 @@
 	<section> 
      
 		<article>
-			<h2> Week 1 project</h2>
+			<h2> Week 1 project</h2> <i class="fa fa-bug" aria-hidden="true"></i>
 			
 			<header> Week one mainly involved getting used to a number of new symantec elements which were introduced in HTML5</header>
 
