added some additional font-awesome icons

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<hr> 
 
 	<section> 
-						<h2>Week 2 project</h2>
+						<h2>Week 2 project</h2> <i class="fa fa-bullseye" aria-hidden="true"></i>
 						<header> Week 2's project is to create two webpages. This first webpage is based on the various class projects that I have been working on so far.</header>
 
 
