--- a/boot_strap.html
+++ b/boot_strap.html
@@ -1,29 +1,24 @@
 <!DOCTYPE html> 
 
-<html lang="eng"> 
+<html lang="en"> 
+<meta charset="utf-8"> 
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
 
 <head>
 	
 <title> Bootstrap </title>
 
-<link  rel="stylesheet" type="text/css" href="styles/boot_strap_styles.css"> 
-
-
-<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
-
-
-
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> 
+
+<!-- My css stylesheet --> 
+<link  rel="stylesheet" type="text/css" href="styles/boot_strap_styles.css"> 
+<!--Google fonts-->
+<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 
 </head>
@@ -31,7 +26,7 @@
 
 <div class="row_1">
   <div class="col-sm-12 shell nopadding ">
-     <div id="row_1_box" > Tips & Tricks on learning HTML & CSS
+     <div id="row_1_box" > Bootstrap & grids 
 
 
 
@@ -45,7 +40,10 @@
 
 <div class="row_2">
 	<div class="col-sm-12 nopadding "> 
-       <div id="row_2_box"> row_2 col-sm-12 </div>
+       <div id="row_2_box"> 
+
+        row_2 col-sm-12 Pottery and Cermics as a hobby
+      </div>
 	</div>
      
 </div>
@@ -59,9 +57,14 @@
   </div>
 
   <div class="col-sm-9 nopadding "> 
-    <div class="boxes-content bg-alt"> row_3  col-sm-9. 
+    <div class="boxes-content bg-alt">  
 
-    <p>
+    <p> <div class="btn-group" role="group" aria-label="...">
+            <a href="http://www.schack.org/" target="_blank">  <button type="button" class="btn btn-default">schack</button></a>
+             <a href="http://www.potterymakinginfo.com/news/" target="_blank"><button type="button" class="btn btn-default">potterymakinginfo</button></a>
+             <a href="http://ceramicartistsnow.com/" target="_blank"><button type="button" class="btn btn-default">ceramicartistsnow</button></a>
+         </div></p>
+      <p>row_3  col-sm-9.
     	Tolerably earnestly middleton extremely distrusts she boy now not. Add and offered prepare how cordial two promise. Greatly who affixed suppose but enquire compact prepare all put. Added forth chief trees but rooms think may. Wicket do manner others seemed enable rather in. Excellent own discovery unfeeling sweetness questions the gentleman. Chapter shyness matters mr parlors if mention thought.
     </p>	
     <p> 
@@ -80,11 +83,12 @@
 <div class="row_4">
   
   <div class="col-sm-3 nopadding "> 
-    <div class="boxes-content"> row_4 col-sm-3</div>
+    <div class="boxes-content"> row_4 col-sm-3 Greatly who affixed suppose but enquire compact prepare all put. Added forth chief trees but rooms think may. Wicket do manner others seemed enable rather in. Excellent own discovery unfeeling sweetness questions the gentleman. Chapter shyness matters mr parlors if mention thought.</div>
   </div>
 
   <div class="col-sm-9 nopadding "> 
-    <div class="boxes-content bg-alt"> row_4  col-sm-9 <img id="art_brushes" src="https://images.pexels.com/photos/159644/art-supplies-brushes-rulers-scissors-159644.jpeg?h=350&dpr=2&auto=compress&cs=tinysrgb" alt="art brushes"></div>
+    <div class="boxes-content bg-alt"> row_4  col-sm-9 <iframe width="560" height="315" src="https://www.youtube.com/embed/QkkUWN8XEkQ" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+      </div>
   </div>
 	
 </div>
@@ -93,7 +97,7 @@
 <div class="row_5">
   
   <div class="col-sm-3 nopadding "> 
-    <div class="boxes-content">row_5 col-sm-3 <img id="scenery" src="https://static1.squarespace.com/static/5602e09be4b053956b5c8d3a/t/57051a9c2eeb81f87d3f7b48/1459952291728/nature-mist-mountain-lake-forest-sunrise-washington-state-reflection-snowy-peak-1300x812.jpg?format=1500w" alt="scenery"></div>
+    <div class="boxes-content">row_5 col-sm-3 <img id="scenery" src="https://images.pexels.com/photos/243059/pexels-photo-243059.jpeg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb" alt="scenery"></div>
   </div>
 
   <div class="col-sm-9 nopadding "> 
@@ -111,7 +115,7 @@
 
 <div class="row_6">
 	<div class="col-sm-12 nopadding ">
-     <div class="boxes-content"> row_6 col-sm-12 Tolerably earnestly middleton extremely distrusts she boy now not. Add and offered prepare how cordial two promise. Greatly who affixed suppose but enquire compact prepare all put. Added forth chief trees but rooms think may. Wicket do manner others seemed enable rather in. Excellent own discovery unfeeling sweetness questions the gentleman. Chapter shyness matters mr parlors if mention thought.<img id="web_dev" src="https://images.pexels.com/photos/239898/pexels-photo-239898.jpeg?h=350&dpr=2&auto=compress&cs=tinysrgb" alt="web_dev"></div>
+     <div class="boxes-content"> row_6 col-sm-12 Tolerably earnestly middleton extremely distrusts she boy now not. Add and offered prepare how cordial two promise. Greatly who affixed suppose but enquire compact prepare all put. Added forth chief trees but rooms think may. Wicket do manner others seemed enable rather in. Excellent own discovery unfeeling sweetness questions the gentleman. Chapter shyness matters mr parlors if mention thought.<img id="web_dev" src="https://images.pexels.com/photos/716107/pexels-photo-716107.jpeg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb" alt="web_dev"></div>
     </div>
 </div>
 
